--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,77 @@
-Flask==2.3.3
+absl-py==2.2.2
+annotated-types==0.7.0
+attrs==25.3.0
+blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.3.0
+colorama==0.4.6
+contourpy==1.3.1
+cryptography==44.0.2
+cvzone==1.6.1
+cycler==0.12.1
+Flask==3.1.2
+flatbuffers==25.2.10
+fonttools==4.57.0
+idna==3.10
+itsdangerous==2.2.0
+jax==0.5.3
+jaxlib==0.5.3
+Jinja2==3.1.6
+kiwisolver==1.4.8
+MarkupSafe==3.0.3
+matplotlib==3.10.1
+mediapipe==0.10.21
+ml_dtypes==0.5.1
+MouseInfo==0.1.3
+numpy==1.26.4
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+opt_einsum==3.4.0
+packaging==24.2
+phonenumbers==9.0.2
+pillow==11.1.0
+protobuf==4.25.6
+PyAutoGUI==0.9.54
+pycparser==2.22
+pydantic==2.11.2
+pydantic_core==2.33.1
+PyGetWindow==0.0.9
+PyJWT==2.10.1
+PyMsgBox==1.0.9
+pyparsing==3.2.3
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+pytweening==1.2.0
+requests==2.32.3
+scipy==1.15.2
+sentencepiece==0.2.0
+six==1.17.0
+sounddevice==0.5.1
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+urllib3==2.3.0
+vonage==4.4.0
+vonage-account==1.1.1
+vonage-application==2.0.1
+vonage-http-client==1.5.1
+vonage-jwt==1.1.5
+vonage-messages==1.4.0
+vonage-network-auth==1.0.2
+vonage-network-number-verification==1.0.2
+vonage-network-sim-swap==1.1.2
+vonage-number-insight==1.0.6
+vonage-numbers==1.0.4
+vonage-sms==1.1.5
+vonage-subaccounts==1.0.4
+vonage-users==1.2.1
+vonage-utils==1.1.4
+vonage-verify==2.1.0
+vonage-verify-legacy==1.0.1
+vonage-video==1.2.0
+vonage-voice==1.3.0
+Werkzeug==3.1.3
