Actualización: validación de voltage y mejoras visibles

--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,5 @@ services:
     name: battery-monitor
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app.py"
+    startCommand: "gunicorn app:app"
     plan: free
-
